# rockauto-scraper

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
src/rockauto_scraper/: __init__.py  __main__.py  settings.py
src/rockauto_scraper/pipelines/data_processing/: nodes.py  pipeline.py
src/rockauto_scraper/rockauto_spider/: scrapy.cfg
src/rockauto_scraper/rockauto_spider/rockauto_spider/: items.py  middlewares.py  pipelines.py  settings.py
src/rockauto_scraper/rockauto_spider/rockauto_spider/spiders/: oem_spider.py
